--- a/src/components/social-media-graphics/race/state.module.scss
+++ b/src/components/social-media-graphics/race/state.module.scss
@@ -5,7 +5,6 @@
   }
   width: 900px;
   height: 472.5px;
-  border: 3px solid $color-slate-800;
   position: relative;
   background: white;
   font: normal 100%/1.5 'system-ui', '-apple-system', 'BlinkMacSystemFont',
